welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:10: error: Boolean(false) does not take parameters
		vert=false()	
                          ^