welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
	var vert:Boolean=false;
	avance()
	if (getCouleurSol()==Color.GREEN) {
		recule()
		vert=true;
	} else { 
		recule()
		vert=false()	
	}
	return vert; 
    // Write your code here
}        
